--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	NOTES:
-	1. All tokens are represented by '$' sign in the template.
+	1. All tokens are representeed by '$' sign in the template.
 	2. You can write your code only wherever mentioned.
 	3. All occurrences of existing tokens will be replaced by their appropriate values.
 	4. Blank lines will be removed automatically.
@@ -1215,7 +1215,7 @@ p.nominalBounds = new cjs.Rectangle(-86,-30.8,146.4,90.8);
 		/* button links to wholefoods on click */
 		btn.addEventListener("click", fl_ClickToGoToWebPage);
 		function fl_ClickToGoToWebPage() {
-			window.open("http://www.wholefoodsmarket.com/site_search/pumpkin", "_blank");
+			window.open("http://www.wholefoodsmarket.com/", "_blank");
 		}
 		/* when button is hovered over - daytime invisible, nighttime underneath */
 		btn.addEventListener("mouseover", fl_MouseOverHandler);
